syntax = "proto3";

package insole.app.order;

option java_multiple_files = true;
option java_package = "com.sennotech.sennofit.insole.app.order.generated";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "com/sennotech/sennofit/insole/app/proto/sku.proto";

// 商品服务
service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {
        option (google.api.http) = {
            post: "/insole.app.order.OrderService/CreateOrder"
        };
    };
    rpc ListOrder (ListOrderRequest) returns (ListOrderResponse);
    rpc GetOrder (GetOrderRequest) returns (OrderDetailResponse) {
        option (google.api.http) = {
            post: "/insole.app.order.OrderService/GetOrder"
        };
    };
}

message CreateOrderRequest {
    AddressDetail address = 2;
    repeated OrderItemDetailRequest orderItems = 3;
    int64 organizationId = 4;
    ReportDetail reportDetail = 5;
}

message CreateOrderResponse {
    int64 orderId = 1;
}

message ReportDetail {
    string gait = 1;
    string frontPosture = 2;
    string sidePosture = 3;
    string leftFoot = 4;
    string rightFoot = 5;
}

message OrderDetailResponse {
    ListOrderResponse response = 1;
}

message OrderDetail {
    string id = 1;
    AddressDetail address = 2;
    repeated OrderItemDetailResponse orderItems = 3;
}

message ListOrderResponse {
    repeated OrderDetail items = 1;
}

message ListOrderRequest {
}

message GetOrderRequest {
    repeated int64 id = 1;
}

message AddressDetail {
    string gender = 1;
    string shippingAddress = 2;
    string customerName = 3;
    string customerPhone = 4;
}

message OrderItemDetailRequest {
    int32 shoesSize = 1;
    int32 quantity = 2;
    string skuId = 3;
}

message OrderItemDetailResponse {
    int32 shoesSize = 1;
    int32 quantity = 2;
    sku.SkuDetail sku = 3;
}